--- a/lab_01/docs/parts/01-title.tex
+++ b/lab_01/docs/parts/01-title.tex
@@ -31,9 +31,10 @@
 		
 		\textbf{\textit{по дисциплине <<Моделирование>>}}
 		
-		\textit{<<Изучение функций распределения}
-		\textit{и плотности распределения>>}
+		\textit{<<Изучение функций распределения и плотности распределения>>}
 			
+		\fontsize{16pt}{\baselineskip}
+		\textit{Вариант №2}
 	\end{center}
 	
 	
@@ -44,12 +45,14 @@
 		\centering
 		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
 			Студент группы \textbf{ИУ7И-72Б} & & \uline{\hfill \textbf{Фам М. Х.} \hfill} \\
+			& & \scriptsize (Фамилия И.О. )
 		\end{signstabular}
 		
 		\vspace{\baselineskip}
 		
 		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
 			Преподаватель & & \uline{\hfill \textbf{Рудаков И. В.} \hfill} \\
+			& & \scriptsize (Фамилия  И.О.)
 		\end{signstabular}
 	\end{table}
 	
