--- a/lab_01/docs/parts/07-analysis.tex
+++ b/lab_01/docs/parts/07-analysis.tex
@@ -1,7 +1,7 @@
 \chapter{Теоретическая часть}
 
 
-\section{Задание}
+\section{Условие лабораторной}
 
 Разработать программу для построения графиков функции распределения и функции плотности распределения для следующих распределений: 
 \begin{itemize}
