--- a/lab_01/docs/parts/09-technological.tex
+++ b/lab_01/docs/parts/09-technological.tex
@@ -1,6 +1,6 @@
 \chapter{Практическая часть}
 
-На рисунках~\ref{ex:r1}--\ref{ex:r2} представлены построенные графики по заданным параметрам для равномерного распределения.
+На рисунке~\ref{ex:r1} представлены построенные графики по заданным параметрам для равномерного распределения.
 
 \begin{figure}[ht!]
 	\centering
@@ -11,16 +11,16 @@
 
 \clearpage
 
-\begin{figure}[ht!]
-	\centering
-	\includegraphics[width=0.8\linewidth]{img/r2.png}
-	\caption{Равномерное распределение при a = -7 и b = 5}
-	\label{ex:r2}
-\end{figure}
+%\begin{figure}[ht!]
+%	\centering
+%	\includegraphics[width=0.8\linewidth]{img/r2.png}
+%	\caption{Равномерное распределение при a = -7 и b = 5}
+%	\label{ex:r2}
+%\end{figure}
 
-\clearpage
-
-На рисунках~\ref{ex:n2}--\ref{ex:n3} представлены построенные графики по заданным параметрам для нормального распределения.
+%\clearpage
+%
+На рисунке~\ref{ex:n1} представлены построенные графики по заданным параметрам для нормального распределения.
 
 \begin{figure}[ht!]
 	\centering
@@ -30,19 +30,19 @@
 \end{figure}
 
 \clearpage
-
-\begin{figure}[ht!]
-	\centering
-	\includegraphics[width=0.8\linewidth]{img/n2.png}
-	\caption{Нормальное распределение при m = 2.5 и $\sigma$ = 1}
-	\label{ex:n2}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[ht!]
-	\centering
-	\includegraphics[width=0.8\linewidth]{img/n3.png}
-	\caption{Нормальное распределение при m = 0 и $\sigma$ = 4}
-	\label{ex:n3}
-\end{figure}
+%
+%\begin{figure}[ht!]
+%	\centering
+%	\includegraphics[width=0.8\linewidth]{img/n2.png}
+%	\caption{Нормальное распределение при m = 2.5 и $\sigma$ = 1}
+%	\label{ex:n2}
+%\end{figure}
+%
+%\clearpage
+%
+%\begin{figure}[ht!]
+%	\centering
+%	\includegraphics[width=0.8\linewidth]{img/n3.png}
+%	\caption{Нормальное распределение при m = 0 и $\sigma$ = 4}
+%	\label{ex:n3}
+%\end{figure}
